WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167394
Fold USER_TIMING into WEB_TIMING and make it a RuntimeEnabledFeature
https://bugs.webkit.org/show_bug.cgi?id=167394
Summary
Fold USER_TIMING into WEB_TIMING and make it a RuntimeEnabledFeature
Joseph Pecoraro
Reported
2017-01-24 15:52:20 PST
Summary: Fold USER_TIMING into WEB_TIMING and make it a RuntimeEnabledFeature Nobody enabled the right set of build flags to use them anyways so there should be no web exposed change. All of the Performance Timing specifications are highly coupled. So let make WEB_TIMING encompass them all, and turn on and off individual pieces: - High Resolution Time (window.performance) - Performance Timeline (PerformanceEntry, PerformanceObserver) - Navigation Timing ("navigation" entries) - Resource Timing ("resource" entries) - User Timing ("mark" / "measure" entries)
Attachments
[PATCH] Proposed Fix
(73.24 KB, patch)
2017-01-24 15:56 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(74.46 KB, patch)
2017-01-24 16:13 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(174.42 KB, patch)
2017-01-24 17:44 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-01-24 15:56:18 PST
Created
attachment 299645
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 2
2017-01-24 16:13:49 PST
Created
attachment 299646
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2017-01-24 16:36:36 PST
Comment on
attachment 299646
[details]
[PATCH] Proposed Fix
> /Volumes/Data/EWS/WebKit/Source/WebCore/bindings/js/JSPerformanceEntryCustom.cpp:38:10: fatal error: 'JSPerformanceMark.h' file not found > #include "JSPerformanceMark.h" > ^ > 1 error generated.
Oops, I'll need to add these.
Joseph Pecoraro
Comment 4
2017-01-24 17:44:05 PST
Created
attachment 299658
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 5
2017-01-24 18:25:56 PST
Comment on
attachment 299658
[details]
[PATCH] Proposed Fix Looks good!
WebKit Commit Bot
Comment 6
2017-01-24 20:24:46 PST
Comment on
attachment 299658
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 299658 Committed
r211133
: <
http://trac.webkit.org/changeset/211133
>
WebKit Commit Bot
Comment 7
2017-01-24 20:24:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug