Source/JavaScriptCore/runtime/CommonIdentifiers.h
@@ -87,6 +87,8 @@
     macro(Object) \
     macro(PerformanceEntry) \
     macro(PerformanceEntryList) \
+    macro(PerformanceMark) \
+    macro(PerformanceMeasure) \
     macro(PerformanceResourceTiming) \
     macro(Promise) \
     macro(Proxy) \
