Source/WebCore/bindings/js/JSPerformanceEntryCustom.cpp
@@ -35,15 +35,12 @@
 #include "JSPerformanceEntry.h"
 
 #include "JSDOMBinding.h"
+#include "JSPerformanceMark.h"
+#include "JSPerformanceMeasure.h"
 #include "JSPerformanceResourceTiming.h"
 #include "PerformanceMark.h"
 #include "PerformanceMeasure.h"
 #include "PerformanceResourceTiming.h"
-
-#if ENABLE(USER_TIMING)
-#include "JSPerformanceMark.h"
-#include "JSPerformanceMeasure.h"
-#endif
 
 using namespace JSC;
 
@@ -54,13 +51,11 @@ JSValue toJSNewlyCreated(ExecState*, JSDOMGlobalObject* globalObject, Ref<Perfor
     if (is<PerformanceResourceTiming>(entry))
         return createWrapper<PerformanceResourceTiming>(globalObject, WTFMove(entry));
 
-#if ENABLE(USER_TIMING)
     if (is<PerformanceMark>(entry))
         return createWrapper<PerformanceMark>(globalObject, WTFMove(entry));
 
     if (is<PerformanceMeasure>(entry))
         return createWrapper<PerformanceMeasure>(globalObject, WTFMove(entry));
-#endif
 
     return createWrapper<PerformanceEntry>(globalObject, WTFMove(entry));
 }
