Source/WebCore/page/PerformanceMark.h
@@ -25,7 +25,7 @@
 
 #pragma once
 
-#if ENABLE(USER_TIMING)
+#if ENABLE(WEB_TIMING)
 
 #include "PerformanceEntry.h"
 #include <wtf/text/WTFString.h>
@@ -49,4 +49,4 @@ SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::PerformanceMark)
     static bool isType(const WebCore::PerformanceEntry& entry) { return entry.isMark(); }
 SPECIALIZE_TYPE_TRAITS_END()
 
-#endif // ENABLE(USER_TIMING)
+#endif // ENABLE(WEB_TIMING)
